# winsnapper

./: .gitignore  AGENTS.md  LICENSE  README.md  README_cn.md  build_exe.bat  build_exe.ps1  icon.py  requirements.txt  winsnap.py
docs/: bugfix-report-v1.1.0.md  rust-subsystem-guide.md
rust_version/winsnap_rust/: Cargo.toml
rust_version/winsnap_rust/spec/: migration-status.md
rust_version/winsnap_rust/src/: main.rs
unittests/: test_config.py  test_hotkeys.py  test_icon.py  test_settings_close.py  test_snap_logic.py
