[package]
name = "winsnapper"
version = "2.0.0"
edition = "2021"

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
fern = "0.7"
chrono = "0.4"

[profile.release]
opt-level = "s"
lto = true
strip = true
